| Summary: | ASTERISK-25171: Early completion of feature code attended transfer results in intermittent one-way audio, "ghost ringing" and robotic sound. | ||
| Reporter: | Rusty Newton (rnewton) | Labels: | |
| Date Opened: | 2015-06-18 15:25:42 | Date Closed: | 2015-06-30 07:09:17 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Bridges/bridge_native_rtp Channels/chan_sip/General Resources/res_pjsip |
| Versions: | SVN 13.4.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | * Asterisk GIT-13-723a9d4 built by rnewton @ newtonr-laptop on a x86_64 running Linux on 2015-05-27 16:13:50 UTC * pjsip 2.3 | Attachments: | ( 0) asterisk-25171.pcap ( 1) extensions_25171.txt ( 2) full_25171.txt ( 3) messages_25171.txt ( 4) pjsip_25171.txt |
| Description: | This occurs with chan_sip and chan_pjsip.
Three phones, A, B and C. [Edit - turns out it doesn't matter what phone is used] REPRODUCTION: * A calls B * A initiates feature code attended transfer and dials C * While C is ringing, A hangs up. "blonde transfer" * C answers and is bridged with B. The result is that B, hears muffled and static-ridden ringing that goes on seemingly forever. Typically B does not receive audio from C, but every few calls B will be able to hear C. The received audio when available will be quite robotic sounding. The audio from B to C is fine. C can hear B clearly. Debug to be attached shortly. | ||
| Comments: | By: Rusty Newton (rnewton) 2015-06-18 16:10:29.790-0500 Attaching configs for reproduction along with messages, full log, pcap from an instance of reproduction. In this particular case, B or BOB experienced the ghost ringing and no receive audio from C. C could hear B fine. By: Rusty Newton (rnewton) 2015-06-18 17:14:49.924-0500 Tested with chan_sip as well. Same deal, it occurs with both SIP channel drivers. By: Rusty Newton (rnewton) 2015-06-18 17:22:07.424-0500 I noticed that in both tests with chan_sip and chan_pjsip that the WriteFormat and WriteTranscode values in 'core show channel' seem odd for the B party. With blind transfers and normal attended transfers it is all ulaw. I only see transcoding come in during the early completion on the attended transfer. {noformat} newtonr-laptop*CLI> core show channel SIP/BOB-00000007 <snip> State: Up (6) NativeFormats: (ulaw) WriteFormat: slin ReadFormat: ulaw WriteTranscode: Yes (slin@8000)->(ulaw@8000) ReadTranscode: No Time to Hangup: 0 Elapsed Time: 0h0m26s {noformat} {noformat} newtonr-laptop*CLI> core show channel SIP/CATHY-00000008 <snip> State: Up (6) NativeFormats: (ulaw) WriteFormat: ulaw ReadFormat: ulaw WriteTranscode: No ReadTranscode: No Time to Hangup: 0 Elapsed Time: 0h1m31s {noformat} | ||